--- a/copy-folder/html/exercise/ex1-copy.html
+++ b/copy-folder/html/exercise/ex1-copy.html
@@ -9,6 +9,32 @@
 
 <body>
 
-</body>
 
-</html>
+</pre>
+        <mark>Lorem ipsum, dolor sit amet consectetur</mark>
+        adipisicing elit. Tenetur, molestiae officiis
+        tempore voluptates repellendus laborum assomenda
+        <del> magnam voluptatibus neque amet, aliquam repellat?</del>
+        Deserunt repudiandae sint quo omnis doloribus
+        qoud ducimus aliquid quiquam voluptate
+        laudantium asperiores dolorum minima, corporis placeat
+</pre>
+    <button>button1</button><button><b>button3</b></button>
+    <button><b>button2</b></button><button>button4</button>
+
+
+    </ins><sup>Далеко-далеко за</sup> словесными горами в <pre>стране
+
+
+
+
+
+
+
+
+    <button><small><b><ins><mark>Go</mark></ins></b></small></button>
+    <button><small><b></b><ins><mark>Go</mark></ins></small></button>
+    </pre>           
+    
+</body>
+</html>    
