--- a/html/exercise/ex1.html
+++ b/html/exercise/ex1.html
@@ -1,11 +1,11 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Exercise 1</title>
 </head>
-<body>
+<>
     
     <h1>
         <marK><ins>Good morning my friend</ins></marK>
@@ -19,15 +19,14 @@
         Deserunt repudiandae sint quo omnis doloribus 
         quod ducimus aliquid quisquam voluptate 
         laudantium asperiores dolorum minima, corporis placeat 
-
+       </pre> 
         <button>button1</button><button><b>button3</b></button>                                 <button>button1</button><button><b>button3</b></button>
         <button><b>button2</b></button><button>button4</button>                                 <button>button2</button><button><b>button4</b></button>
 
 
         <ins><sup>Далеко-далеко за</sup> словесными горами в <sub>стране гласных</sub> и согласных живут рыбные тексты.</ins>
-
-
-
+ 
+    
 
 
 
